--- a/cobi-gottschalk/package.json
+++ b/cobi-gottschalk/package.json
@@ -1,5 +1,7 @@
 {
   "name": "cobi-gottschalk",
+  "homepage": "https://cgotts1.github.io/Cobi-Gottschalk-/",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,10 +16,13 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "gh-pages": "^5.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
