--- a/cobi-gottschalk/package.json
+++ b/cobi-gottschalk/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cobi-gottschalk",
   "homepage": "https://cgotts1.github.io/Cobi-Gottschalk-/",
-
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,12 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "gh-pages": "^5.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
