Changed homepage in json file

--- a/cobi-gottschalk/package.json
+++ b/cobi-gottschalk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cobi-gottschalk",
-  "homepage": "https://cgotts1.github.io/Cobi-Gottschalk-/",
+  "homepage": "https://cobigottschalk.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
